0.1.5
-----

0.1.4
-----
  * support for IA32 (32-bit x86) architecture
  * verbose error reporting
  * document the public API

0.1.3
-----
  * support S390 dump format
  * new API functions:
    - kdump_pageshift

0.1.2
-----
  * all compression libraries are now optional
  * live source uses VMCOREINFO from the running kernel (if available)
  * full vtop translation for x86_64

0.1.1
-----
  * add missing files
  * fix compiler warnings

0.1
---
  * first public release