@@ -1,5 +1,6 @@
 0.1.5
 -----
+  * improved support of Xen dumpcore files
 
 0.1.4
 -----
